adds prettier and eslint to the project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Full-stack / Front-end Web Engineering exercise</title>
-        <meta name="viewport" content="width=device-width">
-    </head>
-    <body>
-        <div id="app"></div>
-        <script src="/dist/index.prod.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Full-stack / Front-end Web Engineering exercise</title>
+    <meta name="viewport" content="width=device-width" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/dist/index.prod.js"></script>
+  </body>
 </html>
